[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/levelup_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Octobre.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="levelup_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Button0" type="Button" parent="."]
margin_left = 77.0
margin_top = 50.0
margin_right = 377.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Button 0"

[node name="Button1" type="Button" parent="."]
margin_left = 542.0
margin_top = 50.0
margin_right = 842.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Button 1"

[node name="Button2" type="Button" parent="."]
margin_left = 82.0
margin_top = 327.0
margin_right = 382.0
margin_bottom = 577.0
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Button 2"

[node name="Button3" type="Button" parent="."]
margin_left = 545.0
margin_top = 321.0
margin_right = 845.0
margin_bottom = 571.0
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Button 3"
